Fixing hashed passwords getting corrupted and header height on mobile

--- a/frontend/src/app/menu-bar/menu-bar.component.css
+++ b/frontend/src/app/menu-bar/menu-bar.component.css
@@ -5,6 +5,18 @@
     cursor: default;
 }
 
+@media screen and (max-width: 516px) {
+    .menuBarDiv {
+        height: 90px;
+    }
+}
+
+@media screen and (max-width: 299px) {
+    .menuBarDiv {
+        height: 120px;
+    }
+}
+
 .menuBarDiv > div {
     margin-top: 7px;
 }
